--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,8 +49,8 @@
         />
       </div>
       <div class="w-full p-2 text-left font-mono">
-        <div class="text-lg"> oscar</div>
-        <span class="text-gray-500">Pick me at 9:00 Am</span>
+        <div class="text-lg"> group-name </div>
+        <span class="text-gray-500">max: Pick me at 9:00 Am</span>
       </div>
     </div>
     <div class="flex flex-row py-4 px-2 items-center border-b-2  hover:bg-gray-200">
@@ -63,7 +63,7 @@
       </div>
       <div class="w-full p-2 text-left font-mono">
         <div class="text-lg ">fun friday</div>
-        <span class="text-gray-500">Hi Sam, Welcome</span>
+        <span class="text-gray-500">tulip: Hi Sam, Welcome</span>
       </div>
     </div>
     <div
