--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./dist/output.css" rel="stylesheet">
-    </head>
+  </head>
 
 <body class="pt-10 pb-20 pr-10 pl-10 text-center">
         <!--[if lt IE 7]>
@@ -111,7 +111,7 @@
   </div>
   <!-- end chat list -->
   <!-- message -->
-  <div class="w-full px-5 flex flex-col justify-between font-mono">
+  <div class="w-full px-5 flex flex-col justify-between font-mono" id="messages">
     <div class="flex flex-col mt-5">
       <div class="flex justify-start mb-4">
         <img
@@ -189,8 +189,11 @@
       <input
         class="w-full bg-gray-300 py-5 px-3 rounded-xl"
         type="text"
-        placeholder="type your message here..."
+        id="inputtext"
+        placeholder="type here..."
       />
+      <button class="p-4 bg-zinc-950 rounded-md text-white font-mono flex  items-center justify-end"
+      onclick="sendChat()"> send </button>
     </div>
   </div>
   <!-- end message -->
@@ -211,11 +214,32 @@
   </div>
 </div>
 </div>
-        <script>
-            const ws = new WebSocket("http://localhost:8080/");
-            ws.onopen = function() {
-                alert("connected");
+  <script>
+      var ws = new WebSocket('ws://localhost:8080/', 'echo-protocol');
+      ws.onopen = function() {
+          alert("ws connected");
+          ws.send(JSON.stringify({
+            type: "JOIN_ROOM",
+            payload: {
+              name: "luna",
+              userId: "1",
+              roomId: "1",
             }
+          }));
+          console.log("sent a request");
+      }
+
+        function sendChat(){
+            console.log("send message");
+            ws.send(JSON.stringify({
+              type: "SEND_CHAT",
+              payload: {
+                message: document.getElementById("inputtext").value,
+                userId: "1", 
+                roomId: "1",
+              }
+            }));
+        }
         </script>
     </body>
 </html>
